/**
 * Copyright (C) 2009-2011 Scalable Solutions AB <http://scalablesolutions.se>
 */

option java_package = "akka.remote.protocol";
option optimize_for = SPEED;

/******************************************
  Compile with:
  cd ./akka-remote/src/main/protocol
  protoc RemoteProtocol.proto --java_out ../java
*******************************************/

/**
 * Defines a remote message.
 */
message RemoteMessageProtocol {
  required UuidProtocol uuid = 1;
  required ActorInfoProtocol actorInfo = 2;
  required bool oneWay = 3;
  optional MessageProtocol message = 4;
  optional ExceptionProtocol exception = 5;
  optional UuidProtocol supervisorUuid = 6;
  optional RemoteActorRefProtocol sender = 7;
  repeated MetadataEntryProtocol metadata = 8;
  optional string cookie = 9;
  /* amqp changes */
  optional string remoteClientId = 10;
}

/**
 * Defines a remote ActorRef that "remembers" and uses its original Actor instance
 * on the original node.
 */
message RemoteActorRefProtocol {
  required string classOrServiceName = 1;
  required string actorClassname = 2;
  required AddressProtocol homeAddress = 3;
  optional uint64 timeout = 4;
}

/**
 * Defines a remote Typed ActorRef that "remembers" and uses its original typed Actor instance
 * on the original node.
 */
message RemoteTypedActorRefProtocol {
  required RemoteActorRefProtocol actorRef = 1;
  required string interfaceName = 2;
}

/**
 * Defines a fully serialized remote ActorRef (with serialized Actor instance)
 * that is about to be instantiated on the remote node. It is fully disconnected 
 * from its original host.
 */
message SerializedActorRefProtocol {
  required UuidProtocol uuid = 1;
  required string id = 2;
  required string actorClassname = 3;
  required AddressProtocol originalAddress  = 4;
  optional bytes actorInstance = 5;
  optional string serializerClassname = 6;
  optional uint64 timeout = 7;
  optional uint64 receiveTimeout = 8;
  optional LifeCycleProtocol lifeCycle = 9;
  optional RemoteActorRefProtocol supervisor = 10;
  optional bytes hotswapStack = 11;
  repeated RemoteMessageProtocol messages = 12;
}

/**
 * Defines a fully serialized remote ActorRef (with serialized typed actor instance)
 * that is about to be instantiated on the remote node. It is fully disconnected
 * from its original host.
 */
message SerializedTypedActorRefProtocol {
  required SerializedActorRefProtocol actorRef = 1;
  required string interfaceName = 2;
}

/**
 * Defines a message.
 */
message MessageProtocol {
  required SerializationSchemeType serializationScheme = 1;
  required bytes message = 2;
  optional bytes messageManifest = 3;
}

/**
 * Defines the actor info.
 */
message ActorInfoProtocol {
  required UuidProtocol uuid = 1;
  required string target = 2;
  required uint64 timeout = 3;
  required ActorType actorType = 4;
  optional TypedActorInfoProtocol typedActorInfo = 5;
  optional string id = 6;
}

/**
 * Defines the typed actor extra info.
 */
message TypedActorInfoProtocol {
  required string interface = 1;
  required string method = 2;
}

/**
 * Defines a UUID.
 */
message UuidProtocol {
  required uint64 high = 1;
  required uint64 low = 2;
}

/**
 * Defines a meta data entry.
 */
message MetadataEntryProtocol {
  required string key = 1;
  required bytes value = 2;
}

/**
 * Defines the actor type.
 */
enum ActorType {
  SCALA_ACTOR = 1;
  JAVA_ACTOR = 2;
  TYPED_ACTOR = 3;
}

/**
 * Defines the serialization scheme used to serialize the message and/or Actor instance.
 */
enum SerializationSchemeType {
  JAVA = 1;
  SBINARY = 2;
  SCALA_JSON = 3;
  JAVA_JSON = 4;
  PROTOBUF = 5;
}

/**
 * Defines the type of the life-cycle of a supervised Actor.
 */
enum LifeCycleType {
  PERMANENT = 1;
  TEMPORARY = 2;
}

/*
enum DispatcherType {
  GLOBAL_EVENT_EXECUTOR_BASED = 1;
  GLOBAL_REACTOR_SINGLE_THREAD_BASED = 2;
  GLOBAL_REACTOR_THREAD_POOL_BASED = 3;
  EVENT_EXECUTOR_BASED = 4;
  THREAD_BASED = 5;
}
*/

/**
 * Defines the life-cycle of a supervised Actor.
 */
message LifeCycleProtocol {
  required LifeCycleType lifeCycle = 1;
}

/**
 * Defines a remote address.
 */
message AddressProtocol {
  required string hostname = 1;
  optional uint32 port = 2;
  /* amqp changes */
  optional string nodeName = 3;
}

/**
 * Defines an exception.
 */
message ExceptionProtocol {
  required string classname  = 1;
  required string message = 2;
}